assets/css/style.css
/* Google Fonts Import */
@import url('https://fonts.googleapis.com/css2?family=Cause:wght@100..900&family=Permanent+Marker&display=swap');

/* CSS Variables */
:root {
--primary-font: "permanent marker", sans-serif;
--secondary-font: "cause", sans-serif;
--primary-color-dark: rgb(0,146,70);
--primary-color-light: rgb(173, 235, 203);
--secondary-color: rgb(206,43,55);
--tertiary-color: rgb(131, 114, 114);
}

/* Global styles */
body {
    background-color: var(--primary-color-light);
}

h1 {
    color: var(--primary-color-dark);
    font-family: var(--primary-font);
}

h2{
    color: var(--secondary-color);
    font-family: var(--primary-font);
    font-size: 6vh;
}

h3 {
    color: var(--primary-color-dark);
    font-family: var(--secondary-font);
}

/* Navigation */
.navbar {
   background-color: var(--primary-color-light);
   padding: 0.1rem;
}

#logo {
    width: auto;
    height: 4rem;
    border-radius: 50px;
}
    

.navbar-nav {
    gap: 1vh;
}

.nav-link {
    font-size: 1.2rem;
    letter-spacing: 0.4rem;
    font-family: var(--secondary-font);
}

.nav-link:hover {
    color: var(--tertiary-color);
    text-decoration: underline;
}

.navbar-toggler-icon {
    width: 2.5rem;
    height: 2.5rem;
}

.reservation-btn {
    background: transparent;
    border: none;
    letter-spacing: 0.4rem;
    font-family: var(--secondary-font);
    display: block;
    padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x)0;
    font-size: 1.4rem;
    font-weight: var(--bs-nav-link-font-weight);
    text-decoration: none;
    background: 0 0;
    border: 0;
    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out;
}


/* Header */
.hero {
    background-image: url("../images/hero-img.jpg");
    height: 100vh;
    width: auto;   
    background-position: center;
    background-size: cover; 
    background-repeat: no-repeat;
    margin-bottom: 3rem;
}

.brand-name {
    font-size: 6vh;
    padding-top: 30vh;
    font-weight: 500;
    letter-spacing: 0.4rem;
    text-transform: uppercase;
    text-shadow: 3px 3px 0 var(--primary-color-light);
    margin-bottom: 5vh;
}


 #italy{
        width: 90px;
        height: 60px;
        border-left: 30px solid rgb(0,146,70);
        border-right: 30px solid rgb(206,43,55);
        background-color: rgb(255,255,255);
        margin: auto;
 }

/* Main section */
    /* Introduction */

.main-content {
        margin: 0px 20px;
    }

.intro {
    background-color: white;
    margin-bottom: 3rem;
    border-radius: 30px;
}    
.intro-title {
    margin-top: 20px;
    margin-bottom: 30px;
    font-size: 6vh;
}

.intro-text {
    font-size: 1.4rem;
    font-style: italic;
    line-height: 2;
    font-family: var(--secondary-font);
    font-weight: 600;
    display: flex;
    align-items: center;

}

.intro-img {
    width: 100%;
    height: auto;
    padding: 0px 10px;
    margin-bottom: 2vh;
    border-radius: 20px;
}

#intro-img {
    display: flex;
    justify-content: center;
    margin-bottom: 30px;
}

.intro-info {
    text-align: center;
}

.call-now {
    padding-top: 20px;
}

.intro-info p {
    text-align: center;
    font-size: 1.5rem;
    font-weight: bold;
}

.table-head {
    background-color: var(--primary-color-light);
}

    /* Services cards*/
.card {
    margin: 1.5rem;
    border-radius: 30px;
}

.card-img {
    border-radius: 30px;
}

.btn {
    background-color: var(--secondary-color);
    color: white;
}

/* Gallery */
    /* Gallery carousel for small devices <768px*/
.gallery-carousel {
    background-color: white;
    border-radius: 30px;
}

.carousel-img {
    border-radius: 30px;
    margin-bottom: 3rem;
}

    /* Gallery expended for devices >768px*/
#gallery-md {
    display: none;
}

.gallery-md {
    background-color: white;
    border-radius: 30px;
    margin-top: 3rem;
}
.gallery-title {
    text-align: center;
    margin-bottom: 3rem;
    font-size: 6vh;
}

.gallery-img {
    max-inline-size: 100%;
    display: flex;
    justify-content: space-evenly;
    border-radius: 10px;
    margin-bottom: 3rem;
}

   
/* Footer */
#footer {
    background-color: white;
    border-radius: 30px;
    line-height: 2.5;
    text-align: center;
}

.fa-instagram {
    height: 50px;
    width: auto;
    color: var(--secondary-color);
}

.fa-square-facebook {
    height: 50px;
    width: auto;
    margin-left: 30px;
}

/* Modal */

.fa-check {
    color: var(--primary-color-dark);
    justify-content: center;
}

.modal-title {
    margin: auto;
    padding-left: 95px;
}

form label {
    color: var(--secondary-color);
}

/* Menu */
.menu-title {
    padding-bottom: 50px;
    text-align: center;
}

.pizza-menu {
    margin-top: 100px;
    margin-bottom: 50px;
    padding: 10px;  
    background-color: white;
    border-radius: 30px;
}

.pizza-menu h1 {
    font-size: 8vh;
}

.pizza-menu h2 {
    padding: 50px;
    text-align: center;
    font-size: 6vh;
}

.table {
    max-width: 75%;
    margin: auto;
}

.ingredients {
    font-style: italic;
    font-weight: normal;
}

.deserts-menu {
    margin-bottom: 50px;
    border-radius: 30px;
}

.drinks-menu {
    margin-bottom: 50px;
    border-radius: 30px
}

/* Media queries */

@media screen and (min-width: 768px) {
    /* Make the brand name well proportioned on larger screen */
    .brand-name {
        font-size: 12vh;
    }

    .gallery-carousel {
        display: none;
    }

    #gallery-md {
        display: block;
    }
}

